<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.AddFormActivity"
        android:background="@color/black">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:text="@string/main_info"
                style="@style/Text.TitleBold"
                android:id="@+id/main_info"
                android:layout_width="0dp"
                android:layout_margin="16dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        <EditText
                style="@style/Text.Light"
                android:textColorHint="@color/lightGray"
                android:background="@drawable/bg_edittext"
                android:id="@+id/form_event_name"
                android:hint="@string/event_name"
                android:layout_width="0dp"
                android:padding="10dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/main_info"/>

        <EditText
                style="@style/Text.Light"
                android:textColorHint="@color/lightGray"
                android:background="@drawable/bg_edittext"
                android:id="@+id/form_date"
                android:hint="@string/form_date"
                android:layout_width="0dp"
                android:inputType="date"
                android:padding="10dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/form_event_name"/>

        <EditText
                android:textColorHint="@color/lightGray"
                style="@style/Text.Light"
                android:background="@drawable/bg_edittext"
                android:id="@+id/form_start_time"
                android:hint="@string/start_time"
                android:inputType="time"
                android:layout_width="150dp"
                android:padding="10dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/form_date"/>

        <EditText
                android:textColorHint="@color/lightGray"
                style="@style/Text.Light"
                android:background="@drawable/bg_edittext"
                android:id="@+id/form_end_time"
                android:hint="@string/end_time"
                android:inputType="time"
                android:layout_width="150dp"
                android:padding="10dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/form_date"/>

        <TextView
                android:text="@string/contact_info"
                style="@style/Text.TitleBold"
                android:id="@+id/contact_info"
                android:layout_width="0dp"
                android:layout_margin="16dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/form_end_time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        <EditText
                android:textColorHint="@color/lightGray"
                style="@style/Text.Light"
                android:background="@drawable/bg_edittext"
                android:id="@+id/form_firstname"
                android:hint="@string/firstname"
                android:layout_width="0dp"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/contact_info"/>

        <EditText
                android:textColorHint="@color/lightGray"
                style="@style/Text.Light"
                android:background="@drawable/bg_edittext"
                android:id="@+id/form_lastname"
                android:hint="@string/lastname"
                android:inputType="textPersonName"
                android:layout_width="0dp"
                android:padding="10dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/form_firstname"/>

        <EditText
                android:textColorHint="@color/lightGray"
                style="@style/Text.Light"
                android:background="@drawable/bg_edittext"
                android:id="@+id/form_email"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:layout_width="0dp"
                android:padding="10dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/form_lastname"/>

        <EditText
                style="@style/Text.Light"
                android:textColorHint="@color/lightGray"
                android:background="@drawable/bg_edittext"
                android:id="@+id/form_phone"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:layout_width="0dp"
                android:padding="10dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/form_email"/>

        <Button
                android:id="@+id/form_btn_add"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/bg_button_design"
                android:gravity="center"
                android:text="@string/add_event"
                android:textAllCaps="false"
                style="@style/Text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/form_phone"/>

        <TextView
                android:text="@string/info"
                style="@style/Text.Light"
                android:id="@+id/info"
                android:layout_width="0dp"

                android:layout_marginBottom="16dp"
                android:padding="10dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/form_btn_add"
                app:layout_constraintEnd_toEndOf="@id/form_btn_add"
                app:layout_constraintStart_toStartOf="@id/form_btn_add"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
