<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.EventsDetailActivity"
        android:background="@color/black">

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="8dp"/>

    <TextView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            android:padding="8dp"
            style="@style/Text.TitleBold"
            tools:text="Event's name"
            android:id="@+id/tv_title_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"/>

    <TextView
            android:id="@+id/text_start"
            style="@style/Text.Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_start"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@id/tv_title_detail"
            app:layout_constraintStart_toStartOf="@id/guideline_start"/>

    <TextView
            android:id="@+id/text_start_detail"
            style="@style/Text.TitleBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="06.09.2019 12:00"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@id/tv_title_detail"
            app:layout_constraintStart_toEndOf="@id/text_start"/>


    <TextView
            android:id="@+id/text_end"
            style="@style/Text.Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_end"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@id/text_start"
            app:layout_constraintStart_toStartOf="@id/guideline_start"/>

    <TextView
            android:id="@+id/text_end_detail"
            style="@style/Text.TitleBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="06.09.2019 12:00"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@id/text_start"
            app:layout_constraintStart_toEndOf="@id/text_end"/>

    <TextView
            android:id="@+id/text_name"
            style="@style/Text.Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/firstname"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@id/text_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"/>

    <TextView
            android:id="@+id/text_name_detail"
            style="@style/Text.TitleBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Иван"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@id/text_end"
            app:layout_constraintStart_toEndOf="@id/text_name"/>

    <TextView
            android:id="@+id/text_surname"
            style="@style/Text.Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lastname"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@id/text_name"
            app:layout_constraintStart_toStartOf="@id/guideline_start"/>

    <TextView
            android:id="@+id/text_surname_detail"
            style="@style/Text.TitleBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Иванов"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@id/text_name"
            app:layout_constraintStart_toEndOf="@id/text_surname"/>

    <TextView
            android:id="@+id/text_email"
            style="@style/Text.Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@id/text_surname"
            app:layout_constraintStart_toStartOf="@id/guideline_start"/>

    <TextView
            android:id="@+id/text_email_detail"
            style="@style/Text.TitleBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Ivan@ivanov.com"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@id/text_surname"
            app:layout_constraintStart_toEndOf="@id/text_email"/>

    <TextView
            android:id="@+id/text_phone"
            style="@style/Text.Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@id/text_email"
            app:layout_constraintStart_toStartOf="@id/guideline_start"/>

    <TextView
            android:id="@+id/text_phone_detail"
            style="@style/Text.TitleBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="8-800-555-35-35"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@id/text_email"
            app:layout_constraintStart_toEndOf="@id/text_phone"/>

</androidx.constraintlayout.widget.ConstraintLayout>